_sass/custom.scss
// Base
html {
  font-size: $base-font-size-small;
  @include breakpoint($medium) {
    font-size: $base-font-size-medium;
  }
  @include breakpoint($large) {
    font-size: $base-font-size-large;
  }
  @include breakpoint($x-large) {
    font-size: $base-font-size-x-large;
  }
}

// Layout classes
.no-sidebar {
  .sidebar {
    display: none;
  }
  .page {
    @include breakpoint($large) {
      width: 100%;
    }
    @include breakpoint($x-large) {
      width: 100%;
    }
  }
  .page__related {
    @include breakpoint($large) {
      width: 100%;
    }
    @include breakpoint($x-large) {
      width: 100%;
    }
  }
}
.no-footer-meta {
  footer.page__meta {
    display: none;
  }
}

// Search
.search-content {
  .archive__item-teaser {
    display: none;
  }
}

// Page
.page__content {
  p {
    img {
      border: 1px solid mix(#000, $border-color, 25%);
      border-radius: $border-radius;
    }
  }
  > iframe {
    display: block;
    margin: 0 0 $indent-var;
  }
}

// Buttons
@each $name, $color in (
  (pocket, $pocket-color),
  (hatena-bookmark, $hatena-bookmark-color),
) {
  .btn--#{$name} {
    @include yiq-contrasted($color);
    &:visited {
      @include yiq-contrasted($color);
    }
    &:hover {
      @include yiq-contrasted(mix(#000, $color, 20%));
    }
  }
}

// Font Awesome
.fa-hatena-bookmark {
  &:before {
    content: "B!";
    font-family: Verdana, sans-serif;
    font-weight: bold;
  }
}

